# gradient_based_navigation

./: CMakeLists.txt  README.md  doc.txt  manifest.xml  package.xml
cfg/: GradientBasedNavigation.cfg
launch/: emergencyStop.launch~  emergencyStop_attr.launch  emergencyStop_attr.launch~  gradient_based_navigation.launch  stage.launch~  teleop.launch
src/: emStop.cpp~  emergencyStop (copy).cpp~  emergencyStop.cpp  emergencyStop.cpp~  emergencyStop_with_actraction.cpp~  emergencyStop_with_attraction.cpp  emergencyStop_with_attraction.cpp~  gradient_based_navigation.cpp  joystick_control.cpp  keyboard_control.cpp  ps3joystick.cpp  ps3joystick.cpp~  sendActractivePoints.cpp~  sendAttractivePoints.cpp  teleop_key.cpp  teleop_key.cpp~
world/: hospital.world  willow-erratic2.world  willow-erratic3.world  willow-erratic3.world~
